src/components/Services/ServicesSection.css
.services {
    height: 100vh;
    width: 100%;
    margin-top: 8rem;
    display: grid;
    justify-items: center;
}

.section__heading {
    text-align: center;
    font-size: 4rem;
    align-self: end;
    width: 80%;
    text-shadow: 0 .2rem .2rem rgba(17, 39, 59, .4);
}

.services__container {
    justify-self: stretch;
    display: grid;
    grid-template-columns: .5% 99% .5%;
    align-items: stretch;
    width: 100%;
    overflow-x: hidden;
    position: relative;
    scroll-behavior: smooth;
}

.services__container:hover > .blur-circle {
    opacity: 1;
}

.blur-circle {
    opacity: 0;
    width: 6rem;
    height: 6rem;
    border-radius: 100%;
    background-color: rgba(17, 39, 59, 1);
    position: absolute;
    align-self: center;
    z-index: 100;
    backdrop-filter: blur(1rem);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    outline: none;
    transition: all .2s;
}

.blur-circle:active {
    transform: scale(1.1);
}

.blur-right {
    grid-row: 1 / 2;
    grid-column: 1 / 2;
    right: 1rem;
    visibility: hidden;
    display: none;
    opacity: 0;
}

.blur-left {
    grid-column: 3 / 4;
    grid-row: 1 / 2;
    left: 1rem;
}

.services__items {
    justify-self: center;
    align-self: center;
    grid-column: 1 / -1;
    grid-row: 1 / 2;
    width: 99%;
    list-style: none;
    display: grid;
    grid-auto-flow: column;
    column-gap: 1rem;
    align-items: center;
    box-shadow:  -.05rem -.05rem 1rem var(--color-blue-dark-1);
    z-index: 10;
    scroll-snap-type: x mandatory;
    overflow-x: scroll;
    scroll-behavior: smooth;
}

.services__items > * {
    scroll-snap-align: start;
}


.services__items::-webkit-scrollbar {
    display: none;
  }

.arrow {
    border: solid #EA8023;
    border-width: 0 .5rem .5rem 0;
    box-shadow: 0 .4rem .4rem rgba(234,128,35,.25); 
    display: inline-block;
    padding: .3rem;
    cursor: pointer;
    height: 2.5rem;
    width: 2.5rem;
    transition: all .2s;
}

.right {
    transform: rotate(-45deg) translateX(-.4rem);
    -webkit-transform: rotate(-45deg) translateX(-.4rem);
}
    
.right:hover {
    transform: rotate(-45deg) scale(1.1)  translateX(-.4rem);
}

.left {
    transform: rotate(135deg)  translate(-.2rem, -.6rem);
    -webkit-transform: rotate(135deg)  translate(-.2rem, -.6rem);
}

.left:hover {
    transform: rotate(135deg) scale(1.1)  translate(-.2rem, -.6rem);
}

